review comments updated

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           class="header__image"
         />
         <div class="header__footer">
-          <a class="header__link">About the library &darr;</a>
+          <a href="#about" class="header__link">About the library &darr;</a>
           <p class="header__address">
             200 Success Avenue, The Town of Practicum
           </p>
@@ -293,8 +293,7 @@
       </main>
       <footer class="footer" id="contacts">
         <div class="footer__columns">
-          <div class="footer__column">
-            <div class="footer__logo"></div>
+          <div class="footer__logo">
             <img
               class="footer__logo"
               src="./images/logo_white.png"
@@ -302,14 +301,14 @@
             />
           </div>
           <div class="footer__column footer__column_content_hours">
-            <h2 class="footer__heading footer__column-heading">Hours</h2>
+            <h2 class="footer__column-heading">Hours</h2>
             <ul class="footer__list">
               <li class="footer__list-item">Weekdays: 9am - 8pm</li>
               <li class="footer__list-item">Weekends: 10am - 6pm</li>
             </ul>
           </div>
           <div class="footer__column footer__column_content_social">
-            <h2 class="footer__heading footer__column-heading">Social Media</h2>
+            <h2 class="footer__column-heading">Social Media</h2>
             <ul class="footer__list">
               <li class="footer__list-item">
                 <a class="footer__column-link" href="#">
